--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 
     <!-- App -->
      <script src="src/app.js" async></script>
+
+     <!-- Midtrans -->
+      <script type="text/javascript"
+      src="https://app.sandbox.midtrans.com/snap/snap.js"
+      data-client-key="SB-Mid-client-2Y5uq0ktzBUELu3f"></script>
+
   </head>
   <body>
     <!-- Navbar start -->
